--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+fat_bike/muk.pdn
+fat_bike/big-pedal.jpg
+fat_bike/big-gears.jpg
+fat_bike/big-frame.jpg
+fat_bike/big-brake.jpg
+fat_bike/big-fork.jpg
